Fix spacing for the navbar slidein at breakpoints.

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -4,8 +4,13 @@
   margin-left: 20%;
 }*/
 
+/* Fonts */
+/*font-family: 'Nunito', sans-serif;
+font-family: 'Ubuntu Condensed', sans-serif;*/
+
 /* Smartphones (portrait) ----------- */
 @media only screen and (min-width : 330px) {
+
 
   .App {
     display: grid;
@@ -13,9 +18,36 @@
     text-align: center;
     width: 100%;
     height: 600px;
+    font-family: 'Nunito', sans-serif;
   }
+
   .main{
     height: 100%;
+  }
+
+  .navBar{
+    position: absolute;
+    z-index: 5;
+    width: 20%;
+    height: 500px;
+    background-color: grey;
+    padding-top: 50px;
+    display: flex;
+    flex-direction: column;
+    animation-duration: 1s;
+    animation-name: slidein;
+  }
+
+  @keyframes slidein {
+    from {
+      margin-right: 100%;
+      width: 0%;
+    }
+
+    to {
+      margin-right: 0%;
+      width: 20%;
+    }
   }
 
   .mapStyle{
@@ -24,6 +56,39 @@
     z-index: 1;
     width: 100%;
     height: 550px;
+  }
+
+  .eventForm{
+    text-align: center;
+    background-color: white;
+    position: absolute;
+    z-index: 5;
+    width: 79%;
+    border: 1px solid grey;
+    border-radius: 5px;
+    padding: 2px;
+    /*margin: 30px;*/
+    margin-left: 20%;
+  }
+
+  .formInput{
+    border-bottom: 1px solid black;
+    border-top: none;
+    border-right: none;
+    border-left: none;
+  }
+
+  .formInput:focus{
+    border-bottom: 2px solid green;
+    outline: none;
+  }
+
+  .searchResultsList{
+    margin-top: none;
+    background-color: white;
+    position: relative;
+    z-index: 10;
+    list-style: none;
   }
 }
 
@@ -39,8 +104,29 @@
     height: 100%;
   }
 
-  #map{
-    height: 80vh;
+  .navBar{
+    position: absolute;
+    z-index: 5;
+    width: 15%;
+    height: 73vh;
+    background-color: grey;
+    padding-top: 50px;
+    display: flex;
+    flex-direction: column;
+    animation-duration: 1s;
+    animation-name: slidein;
+  }
+
+  @keyframes slidein {
+    from {
+      margin-right: 100%;
+      width: 0%;
+    }
+
+    to {
+      margin-right: 0%;
+      width: 15%;
+    }
   }
 
   .mapStyle{
@@ -48,7 +134,40 @@
     position: relative;
     z-index: 1;
     width: 100%;
-    height: 100%;
+    height: 800px;
+  }
+
+  .eventForm{
+    text-align: center;
+    background-color: white;
+    position: absolute;
+    z-index: 5;
+    width: 79%;
+    border: 1px solid grey;
+    border-radius: 5px;
+    padding: 2px;
+    /*margin: 30px;*/
+    margin-left: 20%;
+  }
+
+  .formInput{
+    border-bottom: 1px solid black;
+    border-top: none;
+    border-right: none;
+    border-left: none;
+  }
+
+  .formInput:focus{
+    border-bottom: 2px solid green;
+    outline: none;
+  }
+
+  .searchResultsList{
+    margin-top: none;
+    background-color: white;
+    position: relative;
+    z-index: 10;
+    list-style: none;
   }
 }
 
@@ -70,6 +189,64 @@
     width: 100%;
     height: 700px;
   }
+
+  .navBar{
+    position: absolute;
+    z-index: 5;
+    width: 10%;
+    height: 73vh;
+    background-color: grey;
+    padding-top: 50px;
+    display: flex;
+    flex-direction: column;
+    animation-duration: 1s;
+    animation-name: slidein;
+  }
+
+  @keyframes slidein {
+    from {
+      margin-right: 100%;
+      width: 0%;
+    }
+
+    to {
+      margin-right: 0%;
+      width: 10%;
+    }
+  }
+
+  .eventForm{
+    text-align: center;
+    background-color: white;
+    position: absolute;
+    z-index: 5;
+    width: 79%;
+    border: 1px solid grey;
+    border-radius: 5px;
+    padding: 2px;
+    /*margin: 30px;*/
+    margin-left: 20%;
+  }
+
+  .formInput{
+    border-bottom: 1px solid black;
+    border-top: none;
+    border-right: none;
+    border-left: none;
+  }
+
+  .formInput:focus{
+    border-bottom: 2px solid green;
+    outline: none;
+  }
+
+  .searchResultsList{
+    margin-top: none;
+    background-color: white;
+    position: relative;
+    z-index: 10;
+    list-style: none;
+  }
 }
 
 .App-header {
@@ -89,36 +266,6 @@
   font-size: 1.5em;
 }
 
-/*nav bar*/
-.navBar{
-  position: absolute;
-  z-index: 5;
-  width: 10%;
-  height: 100%;
-  background-color: grey;
-  padding-top: 50px;
-  display: flex;
-  flex-direction: column;
-  animation-duration: 1s;
-  animation-name: slidein;
-}
-
-@keyframes slidein {
-  from {
-    margin-right: 100%;
-    width: 0%;
-  }
-
-  to {
-    margin-right: 0%;
-    width: 10%;
-  }
-}
-
-@keyframes slideout {
-
-}
-
 .navBarButton{
   position: absolute;
   z-index: 5;
@@ -131,7 +278,13 @@
 }
 
 .closeButton{
-  margin-top: 0px;
+  position: relative;
+  bottom: 50px;
+  padding: 0px;
+}
+
+.closeX{
+  margin: 0px;
 }
 
 .legendSpace {
@@ -163,7 +316,7 @@
 }*/
 
 /*event form styles*/
-.eventForm{
+/*.eventForm{
   background-color: white;
   position: absolute;
   z-index: 5;
@@ -172,7 +325,7 @@
   border-radius: 5px;
   padding: 5px;
   margin: 30px;
-}
+}*/
 
 .closeForm{
   float: right;
@@ -181,7 +334,7 @@
 .formLabel{
 
 }
-
+/*
 .formInput{
   border-bottom: 1px solid black;
   border-top: none;
@@ -200,7 +353,7 @@
   position: relative;
   z-index: 10;
   list-style: none;
-}
+}*/
 
 /*marker styles*/
 .currentPos{
